--- a/NGP_TermProject/NGP_TermProject_Server/NGP_TermProject_Server.vcxproj
+++ b/NGP_TermProject/NGP_TermProject_Server/NGP_TermProject_Server.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b4c757c5-51ce-4c62-99ec-39071c96b123}</ProjectGuid>
-    <RootNamespace>NGPTermProjectClient</RootNamespace>
+    <ProjectGuid>{d59f283c-011c-44ed-a722-8eb16a8fb83d}</ProjectGuid>
+    <RootNamespace>NGPTermProjectServer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -70,7 +70,6 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -103,13 +102,10 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Program Files (x86)\Windows Kits\10\Include\10.0.22621.0\um\gl;C:\Program Files (x86)\Windows Kits\10\Include\10.0.22621.0\um\glm;C:\Program Files (x86)\Windows Kits\10\Include\10.0.22621.0\um;C:\Program Files (x86)\Windows Kits\10\Include\10.0.22621.0\um\glm\glm;C:\Program Files (x86)\Windows Kits\10\Include\10.0.22621.0\um\gl\glm;C:\Program Files (x86)\Windows Kits\10\Include\10.0.26100.0\um\gl\glm\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalOptions>glew32.lib freeglut.lib %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalLibraryDirectories>C:\Program Files (x86)\Windows Kits\10\Lib\10.0.22621.0\um\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -124,33 +120,10 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalOptions>glew32.lib freeglut.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main_client.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="back.bmp" />
-    <Image Include="bottom.bmp" />
-    <Image Include="front.bmp" />
-    <Image Include="left.bmp" />
-    <Image Include="N0.bmp" />
-    <Image Include="N1.bmp" />
-    <Image Include="N2.bmp" />
-    <Image Include="N3.bmp" />
-    <Image Include="N4.bmp" />
-    <Image Include="N5.bmp" />
-    <Image Include="N6.bmp" />
-    <Image Include="N7.bmp" />
-    <Image Include="N8.bmp" />
-    <Image Include="N9.bmp" />
-    <Image Include="right.bmp" />
-    <Image Include="up.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="fragmentShader.glsl" />
-    <None Include="vertexShader.glsl" />
+    <ClCompile Include="main_server.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Common.h" />
