--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /NGP_TermProject/x64
 /NGP_TermProject/NGP_TermProject_Client/x64
+/NGP_TermProject/NGP_TermProject_Server/x64
 /NGP_TermProject/.vs
