--- a/NGP_TermProject/NGP_TermProject_Client/NGP_TermProject_Client.vcxproj.filters
+++ b/NGP_TermProject/NGP_TermProject_Client/NGP_TermProject_Client.vcxproj.filters
@@ -68,6 +68,12 @@
     <Image Include="up.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="title.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="bitmap1.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="fragmentShader.glsl" />
@@ -77,5 +83,13 @@
     <ClInclude Include="..\Common.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="NGP_TermProject_Client.rc">
+      <Filter>리소스 파일</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
