클라 명령줄 디렉터리 추가

--- a/NGP_TermProject/NGP_TermProject_Client/NGP_TermProject_Client.vcxproj
+++ b/NGP_TermProject/NGP_TermProject_Client/NGP_TermProject_Client.vcxproj
@@ -126,6 +126,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalOptions>glew32.lib freeglut.lib %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalLibraryDirectories>C:\Program Files (x86)\Windows Kits\10\Lib\10.0.22621.0\um\x64</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
