[Client] 매칭중 이미지 추가
비트맵 5개 이미지 추가
glsl 수정
Timer 수정
InitTexture 수정
DrawScene 수정

--- a/NGP_TermProject/NGP_TermProject_Client/NGP_TermProject_Client.vcxproj
+++ b/NGP_TermProject/NGP_TermProject_Client/NGP_TermProject_Client.vcxproj
@@ -135,9 +135,15 @@
   <ItemGroup>
     <Image Include="back.bmp" />
     <Image Include="bitmap1.bmp" />
+    <Image Include="bitmap3.bmp" />
     <Image Include="bottom.bmp" />
     <Image Include="front.bmp" />
     <Image Include="left.bmp" />
+    <Image Include="loading1.bmp" />
+    <Image Include="loading2.bmp" />
+    <Image Include="loading3.bmp" />
+    <Image Include="loading4.bmp" />
+    <Image Include="loading5.bmp" />
     <Image Include="N0.bmp" />
     <Image Include="N1.bmp" />
     <Image Include="N2.bmp" />
