--- a/NGP_TermProject/NGP_TermProject_Server/NGP_TermProject_Server.vcxproj.filters
+++ b/NGP_TermProject/NGP_TermProject_Server/NGP_TermProject_Server.vcxproj.filters
@@ -21,7 +21,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main_server.cpp">
-      <Filter>헤더 파일</Filter>
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
